feat(2023 day 1): add code

--- a/2023/day 1/main.ipynb
+++ b/2023/day 1/main.ipynb
@@ -1020,18 +1020,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "int() argument must be a string, a bytes-like object or a real number, not 're.Match'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/thomasyee/Documents/coding/advent-of-code/2023/day 1/main.ipynb Cell 2\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/thomasyee/Documents/coding/advent-of-code/2023/day%201/main.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m numbers \u001b[39m=\u001b[39m []\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/thomasyee/Documents/coding/advent-of-code/2023/day%201/main.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m lines:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/thomasyee/Documents/coding/advent-of-code/2023/day%201/main.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     numbers\u001b[39m.\u001b[39mappend(\u001b[39mint\u001b[39;49m(re\u001b[39m.\u001b[39;49msearch(\u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39md+\u001b[39;49m\u001b[39m'\u001b[39;49m, line)))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/thomasyee/Documents/coding/advent-of-code/2023/day%201/main.ipynb#W1sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(numbers)\n",
-      "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a real number, not 're.Match'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54953\n"
      ]
     }
    ],
@@ -1041,11 +1037,16 @@
     "lines = content.split('\\n')\n",
     "final_numbers = []\n",
     "for line in lines:\n",
+    "    # create an list of numbers\n",
+    "    line_numbers = re.findall(r'\\d', line)\n",
+    "    # get the first and last values\n",
+    "    final_line_numbers = line_numbers[0] + line_numbers[-1]\n",
     "    final_numbers.append(\n",
-    "        re.findall(r'\\d+', line)\n",
+    "        final_line_numbers\n",
     "    )\n",
     "\n",
-    "print(final_numbers)"
+    "final_answer = sum(int(x) for x in final_numbers)\n",
+    "print(final_answer)"
    ]
   }
  ],
